--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jewel portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1>The World of <span class="orange-color">Jewel Das(JD)</span></h1>
+        <h3>Junior web developer>></h3>
+        <p>Hello! everyone. This is Jewel here. This is my personal portfolio site.Here you can know about me something and find me. Literally, I am a Junior front-end developer.It's my own created site.I have more projects on my github. I am a student of BSc in CSE at Daffodil International University. My working languages are HTML,CSS,Javascript,React.js,Node.js,MongoDB. I also working with Python(Django) as backend and MYSQL also for database.</p>
+        <a class="link-button" href="https://www.linkedin.com/in/jewel-das-jd-1379a11b6/" target="_blank">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/Jeweldas-bg.png" alt="mypicture">
+        </div>
+    </section>
+
+   
 </body>
 </html>
