--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
     <section class="top-banner">
         <div class="half-width">
         <h1>Welcome To</h1>
-        <h1>The World of <span class="orange-color">Jewel Das(JD)</span></h1>
+        <h1>The World of <span class="orange-color">Jewel(JD)</span></h1>
         <h3>Junior web developer>></h3>
         <p>Hello! everyone. This is Jewel here. This is my personal portfolio site.Here you can know about me something and find me. Literally, I am a Junior front-end developer.It's my own created site.I have more projects on my github. I am a student of BSc in CSE at Daffodil International University. My working languages are HTML,CSS,Javascript,React.js,Node.js,MongoDB. I also working with Python(Django) as backend and MYSQL also for database.</p>
         <a class="link-button" href="https://www.linkedin.com/in/jewel-das-jd-1379a11b6/" target="_blank">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/Jeweldas-bg.png" alt="mypicture">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/Jeweldas-bg.png" alt="jwl">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
 
